# ethir

./: .env.template  .gitignore  .gitmodules  Cargo.toml  README.md
contracts/: foundry.toml  remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/src/: EthirFutureToken.sol  EthirFutureTokenFactory.sol  EthirToken.sol  EthirTokenImpl.sol
contracts/src/core/: EthirCollateralManager.sol  EthirOracle.sol  EthirTokenFactory.sol
contracts/src/interfaces/: IEthirCollateralManager.sol  IEthirOracle.sol  IEthirToken.sol  IEthirTokenFactory.sol  IUniswapQuoter.sol
contracts/test/: Demo.t.sol  EthirFutureToken.t.sol  EthirToken.t.sol  LibTokenAddressGenerator.sol
contracts/test/utils/: UniswapFixture.sol  WETH9.json
docs/: docusaurus.config.js  package-lock.json  package.json
docs/dev/contracts/: _category_.json  temp.md
docs/dev/repeaters/: _category_.json  potential-impl.md  reference-impl.md  rule-set.md
docs/protocol/: blockspace-market.md  overview.md  primer.md
docs/protocol/actors/: _category_.json  liquidators.md  repeaters.md  users.md
docs/protocol/protocol-tokenomics/: _category_.json  collateral.md  example.md  summary.md  token-split.md
docs/protocol/risk/: _category_.json  collateral-risk.md  oracle-risk.md  others.md
gas-report/: Cargo.toml
gas-report/src/: main.rs
proto/: api.proto
repeater/: build.rs
repeater/proto/: api.proto
repeater/src/: main.rs
src/: main.rs
src/api/: api.rs
src/relayer/: mod.rs
src/server/: mod.rs
src/state/: mod.rs
src/txn/: mod.rs
src/utils/: poller.rs
(+6 files in other folders)
